Leak of CFErrorRef objects (1.92 Kbytes) in com.apple.WebKit.WebContent.Development running WebKit layout tests on iOS Simulator <https://webkit.org/b/194761>

Reviewed by Myles Maxfield.

* WebKitTestRunner/InjectedBundle/cocoa/ActivateFontsCocoa.mm:
(WTR::activateSystemCoreWebFonts): Log `error` to console if
CTFontManagerRegisterFontsForURL() fails (macOS only).  Update
to use ARC-compliant cast.
(WTR::activateFonts): Change `0` to `nullptr`.  Update to use
ARC-compliant cast.
(WTR::installFakeHelvetica): Log `error` to console if
CTFontManagerRegisterFontsForURL() fails, but only on supported
platforms (macOS Mojave/iOS 12 and newer, not iOS Simulator).
Call CFRelease() on `error` to fix the leak.  Update to use
ARC-compliant cast.
(WTR::uninstallFakeHelvetica): Update to use ARC-compliant
cast.

Canonical link: https://commits.webkit.org/209287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241920 268f45cc-cd09-0410-ab3c-d52691b4dbfc